fix: Update JavaScript path from scripts/app.js to app.js

--- a/index.html
+++ b/index.html
@@ -186,6 +186,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="scripts/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
