--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="scripts/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
