--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Synonym Cards Grid -->
     <main class="main-content" role="main">
         <div class="container">
-            <div class="cards-grid" id="cards-grid" role="list" aria-label="Lista de sinónimos de caminar">
+            <div class="cards-grid" id="cards-container" role="list" aria-label="Lista de sinónimos de caminar">
                 <!-- Cards will be dynamically inserted here -->
             </div>
 
